// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Progress Indicator Layout 1`] = `
<section>
  
    
  <div
    aria-label="0%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    aria-valuetext="0%"
    class="fd-progress-indicator"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 0%; width: 0%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          0%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    aria-label="42%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="fd-progress-indicator"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 42%; width: 42%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          42%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    aria-label="69%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="69"
    aria-valuetext="69%"
    class="fd-progress-indicator"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 69%; width: 69%;"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          69%
        </span>
        
            
      </div>
      
            
      <div
        class="fd-progress-indicator__remaining"
      />
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    aria-label="100%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="100"
    aria-valuetext="100%"
    class="fd-progress-indicator"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 100%; width: 100%"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          100%
        </span>
        
            
      </div>
      
            
      <div
        class="fd-progress-indicator__remaining"
      />
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    aria-label="80 of 100 MB"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="80"
    aria-valuetext="80 of 100 MB"
    class="fd-progress-indicator"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 80%; width: 80%"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          80 of 100 MB
        </span>
        
            
      </div>
      
            
      <div
        class="fd-progress-indicator__remaining"
      />
      
        
    </div>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Components/Progress Indicator States 1`] = `
<section>
  
     
  <div
    aria-label="42%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="fd-progress-indicator"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 42%; width: 42%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          42%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
   
    
  <div
    aria-label="42%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="fd-progress-indicator fd-progress-indicator--informative"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 42%; width: 42%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          42%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
   
    
  <div
    aria-label="42%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="fd-progress-indicator fd-progress-indicator--positive"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 42%; width: 42%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          42%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
    
    
  <div
    aria-label="42%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="fd-progress-indicator fd-progress-indicator--critical"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 42%; width: 42%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          42%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  
   
    
  <div
    aria-label="42%"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="42"
    aria-valuetext="42%"
    class="fd-progress-indicator fd-progress-indicator--negative"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 42%; width: 42%;"
      />
      
            
      <div
        class="fd-progress-indicator__remaining"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          42%
        </span>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

</section>
`;

exports[`Storyshots Components/Progress Indicator Truncation Behaviour 1`] = `
<div
  style="width: 400px; margin: auto;"
>
  
    
  <div
    aria-label="Progress Indicator"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="70"
    aria-valuetext="In cases where the label is being truncated a small popover appears on click."
    class="fd-progress-indicator fd-popover"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar fd-popover__control"
        onclick="onPopoverClick('popoverF0')"
        style="min-width: 70%; width: 70%;"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          In cases where the label is being truncated a small popover appears on click.
        </span>
        
            
      </div>
      
            
      <div
        class="fd-progress-indicator__remaining"
      />
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body"
        id="popoverF0"
      >
        
                
        <div
          class="fd-popover__wrapper"
        >
          
                    
          <div
            class="fd-progress-indicator__overflow"
          >
            
                        
            <span>
              In cases where the label is being truncated a small popover appears on click.
            </span>
            
                        
            <span
              class="fd-progress-indicator__overflow-close"
            >
              
                            
              <i
                class="sap-icon sap-icon--decline"
              />
              
                        
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

    
  <div
    style="margin-bottom: 5rem"
  />
  

    
  <div
    aria-label="Progress Indicator"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="70"
    aria-valuetext="In cases where the label is being truncated a small popover appears on click."
    class="fd-progress-indicator fd-popover"
    role="progressbar"
    tabindex="-1"
  >
    
        
    <div
      class="fd-progress-indicator__container"
    >
      
            
      <div
        class="fd-progress-indicator__progress-bar"
        style="min-width: 30%; width: 30%;"
      >
        
            
      </div>
      
            
      <div
        class="fd-progress-indicator__remaining fd-popover__control"
        onclick="onPopoverClick('popoverF1')"
      >
        
                
        <span
          class="fd-progress-indicator__label"
        >
          In cases where the label is being truncated a small popover appears on click.
        </span>
        
            
      </div>
      
            
      <div
        aria-hidden="false"
        class="fd-popover__body fd-popover__body--right"
        id="popoverF1"
      >
        
                
        <div
          class="fd-popover__wrapper"
        >
          
                    
          <div
            class="fd-progress-indicator__overflow"
          >
            
                        
            <span>
              In cases where the label is being truncated a small popover appears on click.
            </span>
            
                        
            <span
              class="fd-progress-indicator__overflow-close"
            >
              
                            
              <i
                class="sap-icon sap-icon--decline"
              />
              
                        
            </span>
            
                    
          </div>
          
                
        </div>
        
            
      </div>
      
        
    </div>
    
    
  </div>
  

    
  <div
    style="margin-bottom: 5rem"
  />
  

</div>
`;
